# OASIZ_TimeLogger2

./: NOTICE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.devcontainer/: devcontainer.json  devcontainer.vim.json
.github/workflows/: release.yaml
.storybook/: main.js
doc/: worklog.md
src/: App.stories.tsx  App.tsx  TabPanel.tsx  TaskList.stories.tsx  TaskList.tsx  TaskListItem.tsx  TaskRecorder.stories.tsx  TaskRecorder.tsx  Types.ts  theme.ts
src-tauri/: .env.template  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-07-10-075640_v0.0.1/: down.sql  up.sql
src-tauri/migrations/2024-08-07-100849_v2.0.0/: down.sql  up.sql
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs
src/TaskList/: TaskAddDialog.tsx  TaskList.stories.tsx  TaskList.tsx  WorkLogEditDialog.stories.tsx  WorkLogEditDialog.tsx
src/TaskRecord/: TaskRecorder.stories.tsx  TaskRecorder.tsx
src/commons/: TaskListItem.stories.tsx  TaskListItem.tsx
src/export/: FileExporter.tsx  ProductivityScoreExporter.tsx
src/hooks/: useTauriService.ts
src/services/: Service.ts  (+2 more)
tauri-plugin-android-intent-send/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-android-intent-send/android/: build.gradle.kts
tauri-plugin-android-intent-send/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-android-intent-send/android/src/main/java/: AndroidIntentSendPlugin.kt  Example.kt  ExamplePlugin.kt
tauri-plugin-android-intent-send/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-android-intent-send/examples/tauri-app/: package.json
tauri-plugin-android-intent-send/examples/tauri-app/src/: App.svelte
tauri-plugin-android-intent-send/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-android-intent-send/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-android-intent-send/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-android-intent-send/guest-js/: index.ts
tauri-plugin-android-intent-send/permissions/: default.toml
tauri-plugin-android-intent-send/permissions/autogenerated/: reference.md
tauri-plugin-android-intent-send/permissions/autogenerated/commands/: send_intent.toml
tauri-plugin-android-intent-send/permissions/schemas/: schema.json
tauri-plugin-android-intent-send/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
