[package]
name = "oasiz_timelogger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oasiz_timelogger_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.1", features = ["chrono", "sqlite"] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

